feat: add ArtResult tests
Signed-off-by: Michael Reichenbach <michael@reichenbach.in>